2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Append "\n" after the start
	tag of a |listing| element (HTML5 revision 1675).

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Typo fixed.

2008-03-01  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm (get_inner_html): Escape NBSP (HTML5 revision
	1277).

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pod: New file.

	* Makefile: New file.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* Serializer.pm: New module (split from ../HTML.pm.src).

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.
	
