@@ -1,5 +1,10 @@
 2008-05-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* Serializer.pm (get_inner_html): Don't escape |"| in
+	content (HTML5 revision 1592).
+
+2008-05-24  Wakaba  <wakaba@suika.fam.cx>
+
 	* Serializer.pm (get_inner_html): Append "\n" after the start
 	tag of a |listing| element (HTML5 revision 1675).
 
